src-frontend/src/liquid-confluence.css
/* ... */
/* All buttons. */
.aui-button {
  transition: none !important;
}

/* Top bar. */
body #header {
  .aui-header {
    background-color: var(--ld-thm-bubblegum-primary);
    box-shadow: var(--ld-shadow-hover);
  }
  .aui-header-inner {
    background-color: transparent;
  }
}

.aui-header .aui-dropdown2-trigger,
.aui-header .aui-dropdown2-trigger,
#header .aui-header .aui-nav-link,
#header .aui-header .aui-nav-imagelink,
#header .aui-header .aui-nav-imagelink,
#header .aui-header .aui-nav-imagelink {
  color: var(--aui-link-color);
}

.aui-header .aui-dropdown2-trigger:hover,
.aui-header .aui-dropdown2-trigger.active,
#header .aui-header .aui-nav-link.active,
#header .aui-header .aui-nav-imagelink.active,
#header .aui-header .aui-nav-imagelink:focus,
#header .aui-header .aui-nav-imagelink:hover,
#header .aui-header a:focus,
#header .aui-header a:hover,
#header .aui-header a:active {
  color: var(--aui-link-color);
  background-color: var(--ld-thm-bubblegum-primary-hover);
}

/* Primary button in top bar. */
body #header .aui-header .aui-nav .aui-button-primary {
  background-color: var(--ld-thm-warning);
  color: var(--ld-thm-warning-active);

  &:hover {
    background-color: var(--ld-thm-warning-hover);
    color: var(--ld-thm-warning-active);
  }

  &:focus {
    background-color: var(--ld-thm-warning-focus);
    color: var(--ld-thm-warning-active);
  }

  &:active:focus-visible {
    background-color: var(--ld-thm-warning-active);
    color: var(--ld-thm-warning-focus);
  }
}

/* Font weight fixes for small texts. */
#likes-section *,
#labels-section *,
.page-metadata * {
  font: var(--ld-typo-cap-m);
  font-weight: bold !important;
}

/* Background cells. */
#liquid-background-cells {
  position: fixed;
  inset: 0;
  z-index: -1;
}
.acs-side-bar,
#full-height-container {
  background: transparent !important;
}
.ia-fixed-sidebar {
  background: var(--ld-col-neutral-010);
}
#footer-logo {
  background: transparent !important;
}

/* Footer. */
body::after {
  content: '';
  position: fixed;
  inset: 0;
  z-index: -1;
  background: var(--ld-thm-bubblegum-primary-active);
}
.footer-body {
  filter: hue-rotate(180deg) invert(1);
}

/* Icons. */
.aui-icon {
  filter: hue-rotate(30deg);

  &.content-type-page {
    filter: hue-rotate(28deg) contrast(2.5) saturate(0.7);
  }

  &.content-type-attachment-image {
    filter: hue-rotate(120deg) contrast(2.5) saturate(0.4);
  }

  &.content-type-attachment-powerpoint {
    filter: hue-rotate(130deg) contrast(1.5) saturate(0.4);
  }
}

/* Default user icon. */
.userLogo.defaultLogo {
  filter: hue-rotate(3deg) contrast(1.2) saturate(0.45);
}

/* Logo in header. */
.aui-header .aui-header-logo-confluence .aui-header-logo-device {
  background-image: url('out/initial-m.svg') !important;
  width: 2.2rem;
  height: auto;
}

/* Default space logo, page icon. */
.confluence-icon-page,
[src='/confluence/images/logo/default-space-logo.svg'] {
  filter: hue-rotate(35deg);
}

/* Fix color in links due to specificity issues in confluence code. */
.aui-button.aui-button-link.aui-button-link,
.wiki-content.wiki-content a,
.wiki-content.wiki-content a:link,
.wiki-content.wiki-content a:visited,
.wiki-content.wiki-content a:focus,
.wiki-content.wiki-content a:hover,
.wiki-content.wiki-content a:active,
.aui-toolbar .aui-buttons .toolbar-item-link:hover button.toolbar-trigger,
.aui-toolbar .aui-buttons .toolbar-item-link button.toolbar-trigger,
.aui-navgroup-horizontal .aui-nav > li a,
.aui-dialog .dialog-page-menu li.page-menu-item button.item-button,
body.spaces .aui-tabs > .tabs-menu .menu-item a,
body.spaces .aui-tabs > .tabs-menu .menu-item a:link,
body.spaces .aui-tabs > .tabs-menu .menu-item a:visited,
.aui-dialog .dialog-button-panel a.button-panel-link,
a:not(.aui-button, .aui-dialog2-header-close) {
  color: var(--aui-link-color);
}

/* Fix color in buttons due to specificity issues in confluence code. */
.aui-dialog .dialog-button-panel button.button-panel-button {
  color: var(--aui-btn-text);
  background-color: var(--aui-btn-bg);

  &:hover {
    color: var(--aui-btn-text);
    background-color: var(--aui-btn-bg);
  }
}

